[tool.poetry]
name = "demucs_app"
version = "0.1.0"
description = ""
authors = ["masajinobe-ef <priscilla.effects@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
demucs = "^4.0.1"
dora-search = "^0.1.12"
einops = "^0.8.0"
julius = "^0.2.7"
lameenc = "^1.7.0"
openunmix = "^1.3.0"
pyyaml = "^6.0.1"
torch = "^2.3.1"
tqdm = "^4.66.4"
torchaudio = "^2.3.1"
pysoundfile = "^0.9.0.post1"
numpy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
